Fixed incorrect image align for auth forms

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -16,6 +16,7 @@ body {
 .form-signin {
   max-width: 330px;
   padding: 15px;
+  text-align: center;
 }
 
 .form-signin .form-floating:focus-within {
